<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/GridLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#99cc00"
    android:columnCount="1"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.primitiva.MainActivity" >

    <TextView
        android:id="@+id/textViewCadena1"
        android:layout_width="59dp"
        android:layout_height="60dp"
        android:layout_column="0"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginTop="10dp"
        android:layout_row="0"
        android:background="@drawable/fondotext"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/cadena1"
        android:textColor="#ffffff"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textViewCadena2"
        android:layout_width="59dp"
        android:layout_height="60dp"
        android:layout_column="0"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginTop="10dp"
        android:layout_row="1"
        android:background="@drawable/fondotext"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/cadena2"
        android:textColor="#ffffff"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textViewCadena3"
        android:layout_width="59dp"
        android:layout_height="60dp"
        android:layout_column="0"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginTop="10dp"
        android:layout_row="2"
        android:background="@drawable/fondotext"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/cadena3"
        android:textColor="#ffffff"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textViewCadena4"
        android:layout_width="59dp"
        android:layout_height="60dp"
        android:layout_column="0"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginTop="10dp"
        android:layout_row="3"
        android:background="@drawable/fondotext"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/cadena4"
        android:textColor="#ffffff"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textViewCadena5"
        android:layout_width="59dp"
        android:layout_height="60dp"
        android:layout_column="0"
        android:layout_gravity="center_horizontal|top"
        android:layout_marginTop="10dp"
        android:layout_row="4"
        android:background="@drawable/fondotext"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/cadena5"
        android:textColor="#ffffff"
        android:textSize="30sp" />


    <TextView
        android:id="@+id/textViewCadena6"
        android:layout_width="59dp"
        android:layout_height="60dp"
        android:layout_column="0"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_row="5"
        android:background="@drawable/fondotext"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/cadena6"
        android:textColor="#ffffff"
        android:textSize="30sp" />
    
    <Button
        android:id="@+id/buttonGenerar"
        android:layout_column="0"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_row="6"
        android:layout_marginTop="10dp"
        android:onClick="onButtonClickGenerar"
        android:text="@string/btnGenerar" />

</GridLayout>